[gd_scene load_steps=39 format=3 uid="uid://x3l0v6tbskoe"]

[ext_resource type="Script" uid="uid://bqa6ywaj1f0ha" path="res://entities/player/Player.gd" id="1"]
[ext_resource type="Material" uid="uid://cnq7n26g77h12" path="res://materials/tools/direction_indicator.tres" id="2_3c3w1"]
[ext_resource type="Shape3D" uid="uid://d10y7rjr1mkol" path="res://entities/player/dev_collisionShape_collider.tres" id="2_ak4un"]
[ext_resource type="CapsuleMesh" uid="uid://cfupwld60yqhv" path="res://entities/player/dev_meshinstance3D_bean.tres" id="3_1ms0h"]
[ext_resource type="PackedScene" uid="uid://br2xacdpx6eb1" path="res://models/characters/godetteGltf/godetteModel.tscn" id="3_npcl8"]
[ext_resource type="Script" uid="uid://b6s34d6fdekfn" path="res://entities/player/camera_rig.gd" id="3_wnvi2"]
[ext_resource type="Shader" uid="uid://tqasmi738v3e" path="res://shaders/forground_shader.gdshader" id="4_83hs8"]
[ext_resource type="PackedScene" uid="uid://78vc80y3pt41" path="res://entities/weapons/weapon.tscn" id="5_g3lhm"]
[ext_resource type="Resource" uid="uid://bf0kek81jvd6u" path="res://resources/weapons/weapon01_test.tres" id="6_4pwj0"]
[ext_resource type="PackedScene" uid="uid://g1elpx8h7qgu" path="res://entities/systems/enemy_detector.tscn" id="7_fmb3c"]
[ext_resource type="PackedScene" uid="uid://cpml3unngt286" path="res://entities/systems/critical_hit_zone.tscn" id="7_rl6fg"]
[ext_resource type="Material" uid="uid://cyg8rtd0p220l" path="res://materials/tools/danger_indicator.tres" id="10_j531f"]
[ext_resource type="PackedScene" uid="uid://4lmtef3aw73d" path="res://entities/gui/player_ui_elements.tscn" id="11_1ms0h"]
[ext_resource type="Script" uid="uid://c8rrd3ehyg428" path="res://resources/state_machine/state_machine.gd" id="12_2rv2u"]
[ext_resource type="Script" uid="uid://b63nxji74xuo7" path="res://resources/state_machine/states_player/idle.gd" id="13_mq27t"]
[ext_resource type="Script" uid="uid://clavgybhh50q6" path="res://resources/state_machine/states_player/moving.gd" id="14_kwk8g"]
[ext_resource type="Script" uid="uid://dyiw8r4k1x7fy" path="res://resources/state_machine/states_player/sliding.gd" id="15_2a181"]
[ext_resource type="Script" uid="uid://cl726icth6yce" path="res://resources/state_machine/states_player/falling.gd" id="16_aubru"]
[ext_resource type="Script" uid="uid://r8p0nnvm8y6n" path="res://resources/state_machine/states_player/cover.gd" id="19_npcl8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sl4o1"]
radius = 0.3
height = 1.7

[sub_resource type="BoxShape3D" id="6"]
margin = 0.0
size = Vector3(0.6, 1.8, 0.6)

[sub_resource type="PrismMesh" id="PrismMesh_wnvi2"]
material = ExtResource("2_3c3w1")
size = Vector3(0.49, 1, 0.01)

[sub_resource type="TorusMesh" id="TorusMesh_83hs8"]
material = ExtResource("2_3c3w1")
inner_radius = 0.6
outer_radius = 0.7
rings = 16
ring_segments = 4

[sub_resource type="TextMesh" id="TextMesh_3c3w1"]
material = ExtResource("2_3c3w1")
text = "ðŸ˜Ž"
pixel_size = 0.028

[sub_resource type="ShaderMaterial" id="ShaderMaterial_83hs8"]
shader = ExtResource("4_83hs8")
shader_parameter/MULTIPLIER = 0.56
shader_parameter/SCALE = 0.25
shader_parameter/SOFTNESS = 0.25
shader_parameter/BASE_OPACITY = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x8kxw"]
shader = ExtResource("4_83hs8")
shader_parameter/MULTIPLIER = 0.56
shader_parameter/SCALE = 0.25
shader_parameter/SOFTNESS = 0.25
shader_parameter/BASE_OPACITY = 0.75

[sub_resource type="SphereMesh" id="SphereMesh_j531f"]
material = ExtResource("10_j531f")
radius = 0.2
height = 0.4

[sub_resource type="AnimationRootNode" id="AnimationRootNode_83hs8"]

[sub_resource type="Animation" id="Animation_x8kxw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.7, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Head:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/DirectionIndicator/ring:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/DirectionIndicator/arrow:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -1.10515)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/MeshInstance3D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Body/Head/MeshInstance3D:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_83hs8"]
resource_name = "default"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_q57vx"]
resource_name = "dev_cover"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 0.7, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/MeshInstance3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.7, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.085, 0)]
}

[sub_resource type="Animation" id="Animation_2a181"]
resource_name = "dev_fall"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Head/MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.314159, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.122173, 0, 0)]
}

[sub_resource type="Animation" id="Animation_mq27t"]
resource_name = "dev_move"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Head/MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.5, 2.16667, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.314159), Vector3(0, 0, 0), Vector3(0, 0, -0.314159), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_rl6fg"]
resource_name = "dev_reload"

[sub_resource type="Animation" id="Animation_aqcbf"]
resource_name = "dev_slide"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.4, -0.65)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.5708, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.4, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Head:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.5708, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("Body/DirectionIndicator/ring:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/DirectionIndicator/arrow:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -2.21)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gskgj"]
_data = {
&"RESET": SubResource("Animation_x8kxw"),
&"default": SubResource("Animation_83hs8"),
&"dev_cover": SubResource("Animation_q57vx"),
&"dev_fall": SubResource("Animation_2a181"),
&"dev_move": SubResource("Animation_mq27t"),
&"dev_reload": SubResource("Animation_rl6fg"),
&"dev_slide": SubResource("Animation_aqcbf")
}

[sub_resource type="PlaneMesh" id="PlaneMesh_ak4un"]
size = Vector2(100, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_1ms0h"]
size = Vector3(100, 1, 100)

[node name="Player" type="CharacterBody3D" groups=["Client"]]
collision_mask = 37383
wall_min_slide_angle = 0.0872665
floor_snap_length = 0.2
script = ExtResource("1")
SPEED_SHOOTING_DEFAULT = 4.0

[node name="Hitbox" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 4160
priority = 10

[node name="ShapeHitbox" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_sl4o1")
debug_color = Color(0.938242, 1.45355e-05, 0.624536, 0.42)

[node name="CollisionShape3D1" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
shape = SubResource("6")
disabled = true

[node name="CollisionShape_collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = ExtResource("2_ak4un")

[node name="CoverRaycasts" type="Node3D" parent="."]

[node name="NHigh" type="RayCast3D" parent="CoverRaycasts"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 1.5, 0)
target_position = Vector3(0, 0, -1)
collision_mask = 32769
debug_shape_custom_color = Color(1, 0.627451, 1, 1)

[node name="SHigh" type="RayCast3D" parent="CoverRaycasts"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 1.5, 0)
target_position = Vector3(0, 0, 1)
collision_mask = 32769
debug_shape_custom_color = Color(1, 0.627451, 1, 1)

[node name="EHigh" type="RayCast3D" parent="CoverRaycasts"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 1.5, 0)
target_position = Vector3(1, 0, 0)
collision_mask = 32769
debug_shape_custom_color = Color(1, 0.627451, 1, 1)

[node name="WHigh" type="RayCast3D" parent="CoverRaycasts"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 1.5, 0)
target_position = Vector3(-1, 0, 0)
collision_mask = 32769
debug_shape_custom_color = Color(1, 0.627451, 1, 1)

[node name="Body" type="Node3D" parent="."]

[node name="godetteModel" parent="Body" instance=ExtResource("3_npcl8")]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)

[node name="Skeleton3D" parent="Body/godetteModel/Sketchfab_model/root/GLTF_SceneRootNode/Armature_Tpose_60/GLTF_created_0" index="0"]
bones/2/rotation = Quaternion(0.0725291, 3.36832e-22, 6.00344e-21, 0.997366)
bones/3/rotation = Quaternion(-0.0522872, 7.63603e-20, 7.88018e-19, 0.998632)
bones/4/rotation = Quaternion(-0.112191, 1.16334e-19, 8.6847e-19, 0.993687)
bones/5/rotation = Quaternion(0.154401, -4.36295e-18, -7.58758e-18, 0.988008)
bones/6/rotation = Quaternion(-0.0807266, 5.5228e-18, 3.76887e-18, 0.996736)
bones/8/rotation = Quaternion(0.999822, 6.13921e-09, -3.25784e-07, -0.0188411)
bones/9/rotation = Quaternion(0.999822, -6.13921e-09, 3.25784e-07, -0.0188411)
bones/12/rotation = Quaternion(-0.00731903, 0.00193528, -0.144654, 0.989453)
bones/13/rotation = Quaternion(0.00366687, 4.46252e-05, -0.0668787, 0.997754)
bones/14/rotation = Quaternion(-0.00391757, 0.015635, 0.0608812, 0.998015)
bones/16/rotation = Quaternion(-0.106709, -0.15013, 0.00275474, 0.982887)
bones/17/rotation = Quaternion(-8.19564e-07, -3.69549e-06, -1.66893e-06, 1)
bones/18/position = Vector3(0.0286253, 0.0804385, -0.00315102)
bones/18/rotation = Quaternion(-0.0301973, 0.0498112, -0.0015066, 0.998301)
bones/19/rotation = Quaternion(-0.0308549, -2.31768e-06, -0.00308669, 0.999519)
bones/20/position = Vector3(0.00803407, 0.0823459, -0.00141352)
bones/20/rotation = Quaternion(-0.0302359, -2.24574e-07, 7.8487e-08, 0.999543)
bones/21/rotation = Quaternion(-0.0281632, -2.62241e-06, 1.54885e-07, 0.999603)
bones/22/rotation = Quaternion(-0.0301687, -0.0667581, 0.00201953, 0.997311)
bones/23/rotation = Quaternion(-0.0310742, -4.85772e-06, 0.00417895, 0.999508)
bones/24/position = Vector3(-0.0301519, 0.0743593, -0.0089096)
bones/24/rotation = Quaternion(-0.0299431, -0.138937, 0.00420313, 0.98984)
bones/25/rotation = Quaternion(-0.0397311, -1.01882e-05, 0.0113781, 0.999146)
bones/26/rotation = Quaternion(-5.30388e-07, 0.012718, -3.4081e-08, 0.999919)
bones/27/rotation = Quaternion(0.00125935, -0.0238114, 0.0278714, 0.999327)
bones/29/rotation = Quaternion(-0.00731915, -0.00193491, 0.144645, 0.989455)
bones/30/rotation = Quaternion(0.00366691, -4.41139e-05, 0.066896, 0.997753)
bones/31/rotation = Quaternion(-0.00391771, -0.015636, -0.0608897, 0.998014)
bones/32/rotation = Quaternion(0.113964, -0.581762, 0.343025, 0.728628)
bones/33/rotation = Quaternion(-0.106709, 0.150133, -0.00275328, 0.982886)
bones/34/rotation = Quaternion(-1.08033e-07, 4.88013e-07, -4.47035e-08, 1)
bones/35/position = Vector3(-0.0286253, 0.0804387, -0.00315102)
bones/35/rotation = Quaternion(-0.0301973, -0.0498112, 0.00150658, 0.998301)
bones/36/rotation = Quaternion(-0.0308532, 2.38441e-06, 0.00308646, 0.999519)
bones/37/position = Vector3(-0.00803406, 0.0823461, -0.00141376)
bones/37/rotation = Quaternion(-0.0302358, 2.63316e-07, -1.30869e-07, 0.999543)
bones/38/rotation = Quaternion(-0.0281632, 2.6127e-06, -1.21777e-07, 0.999603)
bones/39/rotation = Quaternion(-0.0301686, 0.0667581, -0.00201961, 0.997311)
bones/40/rotation = Quaternion(-0.0310741, 4.86628e-06, -0.00417892, 0.999508)
bones/41/position = Vector3(0.030152, 0.0743595, -0.00890973)
bones/41/rotation = Quaternion(-0.029943, 0.138937, -0.0042032, 0.98984)
bones/42/rotation = Quaternion(-0.039731, 1.02156e-05, -0.0113779, 0.999146)
bones/43/rotation = Quaternion(-2.59899e-07, -0.0127259, 4.28816e-09, 0.999919)
bones/44/rotation = Quaternion(0.00125941, 0.0238133, -0.0278713, 0.999327)
bones/46/rotation = Quaternion(0.997496, 8.43085e-09, -1.18911e-07, -0.070723)
bones/47/rotation = Quaternion(0.696922, 0.0618463, 0.709352, 0.0854121)
bones/47/scale = Vector3(0.999999, 1, 0.999983)
bones/48/rotation = Quaternion(0.0248483, -0.00136397, 0.0938903, 0.995272)
bones/49/rotation = Quaternion(-0.00383558, -0.0101687, -0.542601, 0.83992)
bones/50/rotation = Quaternion(0.258907, 0.965902, -7.66916e-05, 0.000290467)
bones/51/rotation = Quaternion(-3.25077e-08, -0.00861304, -7.05832e-08, 0.999963)
bones/52/rotation = Quaternion(0.535996, -0.465178, 0.52387, -0.471039)
bones/52/scale = Vector3(0.999972, 1, 0.999972)
bones/53/rotation = Quaternion(-0.696922, 0.0618463, 0.709352, -0.0854121)
bones/53/scale = Vector3(0.999999, 1, 0.999983)
bones/54/rotation = Quaternion(0.0248483, 0.00136409, -0.0938903, 0.995272)
bones/55/rotation = Quaternion(-0.00383566, 0.0101685, 0.542601, 0.83992)
bones/56/rotation = Quaternion(-0.258907, 0.965902, -7.66939e-05, -0.000290467)
bones/57/rotation = Quaternion(-1.36319e-08, 0.00860908, 7.49664e-08, 0.999963)
bones/58/rotation = Quaternion(0.535996, 0.465178, -0.52387, -0.471039)
bones/58/scale = Vector3(0.999972, 1, 0.999972)

[node name="Weapon" parent="Body" node_paths=PackedStringArray("parent") instance=ExtResource("5_g3lhm")]
parent = NodePath("../..")
WEAPON_INFO = ExtResource("6_4pwj0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = ExtResource("3_1ms0h")
skeleton = NodePath("../..")

[node name="DirectionIndicator" type="Node3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)

[node name="arrow" type="MeshInstance3D" parent="Body/DirectionIndicator"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -1.10515)
gi_mode = 0
mesh = SubResource("PrismMesh_wnvi2")

[node name="ring" type="MeshInstance3D" parent="Body/DirectionIndicator"]
gi_mode = 0
mesh = SubResource("TorusMesh_83hs8")
skeleton = NodePath("../arrow")

[node name="Head" type="Node3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.423752)
visible = false
mesh = SubResource("TextMesh_3c3w1")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("3_wnvi2")

[node name="CameraMarker3D" type="Marker3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)

[node name="BaseCamera" type="Camera3D" parent="CameraPivot/CameraMarker3D"]
projection = 1
size = 18.0

[node name="BackgroundViewportContainer" type="SubViewportContainer" parent="CameraPivot/CameraMarker3D/BaseCamera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundViewport" type="SubViewport" parent="CameraPivot/CameraMarker3D/BaseCamera/BackgroundViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="BackgroundCamera" type="Camera3D" parent="CameraPivot/CameraMarker3D/BaseCamera/BackgroundViewportContainer/BackgroundViewport"]
cull_mask = 1047553
projection = 1
size = 18.0

[node name="DetailsViewportContainer" type="SubViewportContainer" parent="CameraPivot/CameraMarker3D/BaseCamera"]
material = SubResource("ShaderMaterial_83hs8")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DetailsViewport" type="SubViewport" parent="CameraPivot/CameraMarker3D/BaseCamera/DetailsViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="DetailsCamera" type="Camera3D" parent="CameraPivot/CameraMarker3D/BaseCamera/DetailsViewportContainer/DetailsViewport"]
cull_mask = 1047554
projection = 1
size = 18.0

[node name="ForegroundViewportContainer" type="SubViewportContainer" parent="CameraPivot/CameraMarker3D/BaseCamera"]
material = SubResource("ShaderMaterial_x8kxw")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ForegroundViewport" type="SubViewport" parent="CameraPivot/CameraMarker3D/BaseCamera/ForegroundViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="ForegroundCamera" type="Camera3D" parent="CameraPivot/CameraMarker3D/BaseCamera/ForegroundViewportContainer/ForegroundViewport"]
cull_mask = 1047556
projection = 1
size = 18.0

[node name="CriticalHitZone" parent="." instance=ExtResource("7_rl6fg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="SlideDirection" type="Marker3D" parent="."]
visible = false
gizmo_extents = 0.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="SlideDirection"]
mesh = SubResource("SphereMesh_j531f")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationRootNode_83hs8")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gskgj")
}
autoplay = "default"

[node name="EnemyDetector" parent="." instance=ExtResource("7_fmb3c")]
top_level = true

[node name="SlidingTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="SlideCooldown" type="Timer" parent="."]
one_shot = true

[node name="CoverCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="MouseSafetyNet" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="MouseSafetyNet"]
visible = false
mesh = SubResource("PlaneMesh_ak4un")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MouseSafetyNet"]
shape = SubResource("BoxShape3D_1ms0h")

[node name="UI_elements" parent="." instance=ExtResource("11_1ms0h")]

[node name="Label_canreload" parent="UI_elements/HUD/dev_info_box" index="4"]
text = "Can reload  ?"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("12_2rv2u")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("13_mq27t")

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource("14_kwk8g")

[node name="Sliding" type="Node" parent="StateMachine"]
script = ExtResource("15_2a181")

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource("16_aubru")

[node name="Cover" type="Node" parent="StateMachine"]
script = ExtResource("19_npcl8")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="timeout" from="SlidingTimer" to="StateMachine/Sliding" method="_on_sliding_timer_timeout"]
[connection signal="timeout" from="SlideCooldown" to="." method="_on_slide_cooldown_timeout"]
[connection signal="timeout" from="CoverCooldown" to="." method="_on_cover_cooldown_timeout"]

[editable path="Body/godetteModel"]
[editable path="Body/Weapon"]
[editable path="UI_elements"]
